@@ -1,5 +1,6 @@
 package cz.novoj.generation.proxyGenerator.implementation.javassist;
 
+import cz.novoj.generation.proxyGenerator.infrastructure.ProxyStateAccessor;
 import javassist.util.proxy.MethodHandler;
 import javassist.util.proxy.Proxy;
 import javassist.util.proxy.ProxyFactory;
@@ -8,6 +9,7 @@ import lombok.extern.apachecommons.CommonsLog;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
+import java.util.Objects;
 import java.util.concurrent.ConcurrentHashMap;
 
 /**
@@ -16,54 +18,69 @@ import java.util.concurrent.ConcurrentHashMap;
  * @author Jan Novotný (novotny@fg.cz), FG Forrest a.s. (c) 2016
  */
 @CommonsLog
-public final class JavassistProxyGenerator {
-    private static Map<List<Class>, Class> cachedProxyClasses = new ConcurrentHashMap<>(64);
+public class JavassistProxyGenerator {
+    private static final Map<List<Class<?>>, Class<?>> CACHED_PROXY_CLASSES = new ConcurrentHashMap<>(64);
 
-    public static <T> T instantiate(MethodHandler methodHandler, Class... interfaces) {
+    @SuppressWarnings("unchecked")
+	public static <T> T instantiate(MethodHandler methodHandler, Class<?>... interfaces) {
         return instantiateProxy(
-                getProxyClass(interfaces),
+				(Class<T>)getProxyClass(interfaces),
                 methodHandler
         );
     }
 
-    private static Class getProxyClass(Class... interfaces) {
-        return cachedProxyClasses.computeIfAbsent(
+    private static Class<?> getProxyClass(Class<?>... interfaces) {
+		// COMPUTE IF ABSENT = GET FROM MAP, IF MISSING -> COMPUTE, STORE AND RETURN RESULT OF LAMBDA
+        return CACHED_PROXY_CLASSES.computeIfAbsent(
+        		// CACHE KEY
                 Arrays.asList(interfaces),
+				// LAMBDA THAT CREATES OUR PROXY CLASS
                 classes -> {
-                    ProxyFactory f = new ProxyFactory();
+                    ProxyFactory fct = new ProxyFactory();
+                    // IF WE PROXY ABSTRACT CLASS, WE HAVE A RULE THAT IT HAS TO BE FIRST IN LIST
                     if (interfaces[0].isInterface()) {
-                        final Class[] finalContract = new Class[interfaces.length + 1];
-                        finalContract[0] = cz.novoj.generation.proxyGenerator.infrastructure.Proxy.class;
+                    	// FIRST IS INTERFACE
+						// AUTOMATICALLY ADD PROXYSTATEACCESSOR CLASS TO EVERY OUR PROXY WE CREATE
+                        final Class<?>[] finalContract = new Class[interfaces.length + 1];
+                        finalContract[0] = ProxyStateAccessor.class;
                         System.arraycopy(interfaces, 0, finalContract, 1, interfaces.length);
-
-                        f.setInterfaces(finalContract);
+						// WE'LL EXTEND OBJECT CLASS AND IMPLEMENT ALL INTERFACES
+                        fct.setInterfaces(finalContract);
                     } else {
-                        final Class[] finalContract = new Class[interfaces.length];
-                        finalContract[0] = cz.novoj.generation.proxyGenerator.infrastructure.Proxy.class;
+						// FIRST IS ABSTRACT CLASS
+						// AUTOMATICALLY ADD PROXYSTATEACCESSOR CLASS TO EVERY OUR PROXY WE CREATE
+                        final Class<?>[] finalContract = new Class[interfaces.length];
+                        finalContract[0] = ProxyStateAccessor.class;
                         System.arraycopy(interfaces, 1, finalContract, 1, interfaces.length - 1);
-
-                        f.setSuperclass(interfaces[0]);
-                        f.setInterfaces(finalContract);
+						// WE'LL EXTEND ABSTRACT CLASS AND IMPLEMENT ALL OTHER INTERFACES
+                        fct.setSuperclass(interfaces[0]);
+                        fct.setInterfaces(finalContract);
                     }
 
-                    f.setFilter(m -> !java.util.Objects.equals(m.getName(), "finalize"));
+                    // SKIP FINALIZE METHOD OVERRIDE - STAY AWAY FROM TROUBLE :)
+                    fct.setFilter(method -> !Objects.equals(method.getName(), "finalize"));
 
-                    Class proxyClass = f.createClass();
+                    Class<?> proxyClass = fct.createClass();
                     log.info("Created proxy class: " + proxyClass.getName());
+
                     return proxyClass;
                 });
     }
 
     @SuppressWarnings("unchecked")
-    private static <T> T instantiateProxy(Class proxyClass, MethodHandler methodHandler) {
+    private static <T> T instantiateProxy(Class<T> proxyClass, MethodHandler methodHandler) {
         try {
-            T proxy = (T) proxyClass.newInstance();
+
+        	// CREATE PROXY INSTANCE
+            T proxy = proxyClass.getConstructor().newInstance();
+            // INJECT OUR METHOD HANDLER INSTANCE TO NEWLY CREATED PROXY INSTANCE
             ((Proxy) proxy).setHandler(methodHandler);
 
             return proxy;
-        } catch (InstantiationException | IllegalAccessException e) {
-            throw new RuntimeException("What the heck? Can't create proxy: " + e.getMessage(), e);
+
+        } catch (Exception e) {
+            throw new IllegalArgumentException("What the heck? Can't create proxy: " + e.getMessage(), e);
         }
-    }
+	}
 
 }
